# cpp-insight

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.ko.md  README.md
include/insight/: archive.h  client.h  connection.h  insight.h  insight_client.h  insight_server.h  packet.h  pipe_transport.h  platform_time.h  profile_types.h  registry.h  reporter.h  scope_profiler.h  server.h  stat_aggregator.h  stat_id.h  stat_registry.h  transport.h  windows_archive.h
include/insight/gpu/: d3d11_gpu_profiler_backend.h  gpu_profiler.h  gpu_profiler_backend.h
include/insights/: archive.h  client.h  connection.h  insight.h  insight_d3d11.h  insights_d3d11.h  pipe_transport.h  platform_time.h  registry.h  scope_profiler.h  transport.h  windows_archive.h
include/insights/gpu/: d3d11_gpu_profiler_backend.h  gpu_profiler.h  gpu_profiler_backend.h
src/: client.cpp  connection.cpp  insight_client.cpp  insight_server.cpp  pipe_transport.cpp  reporter.cpp  server.cpp
src/insight/: client.cpp  pipe_transport.cpp  profile_types.h  reporter.cpp  reporter.h  server.cpp  server.h
src/insight/gpu/: d3d11_gpu_profiler_backend.cpp  gpu_profiler.cpp
src/insights/: client.cpp  connection.cpp  pipe_transport.cpp  profile_types.h  reporter.cpp  reporter.h  server.cpp  server.h
src/insights/gpu/: d3d11_gpu_profiler_backend.cpp  gpu_profiler.cpp
tests/: main.cpp
tests/integration/game_stub/: CMakeLists.txt  main.cpp
tests/integration/gpu_stub/: CMakeLists.txt  main.cpp
tests/src/: test_archive.cpp  test_pipe_transport.cpp  test_reporter.cpp  test_scope_profiler.cpp  test_stat_registry.cpp
tests/unit/: test_archive.cpp  test_pipe_transport.cpp  test_registry.cpp  test_reporter.cpp  test_scope_profiler.cpp
viewer/: CMakeLists.txt
viewer/data/: cpp-insights.rc
viewer/include/: flame_panel.h  icons.h  panel.h  realtime_panel.h  stack_panel.h  timeline_panel.h  toolbar_panel.h  viewer.h
viewer/src/: flame_panel.cpp  main.cpp  realtime_panel.cpp  stack_panel.cpp  timeline_panel.cpp  toolbar_panel.cpp  viewer.cpp
